(function() {
    var implementors = Object.fromEntries([["log_store",[["impl ProtobufValue for <a class=\"struct\" href=\"log_store/raft_engine/protos/logstore/struct.EntryImpl.html\" title=\"struct log_store::raft_engine::protos::logstore::EntryImpl\">EntryImpl</a>"],["impl ProtobufValue for <a class=\"struct\" href=\"log_store/raft_engine/protos/logstore/struct.LogStoreState.html\" title=\"struct log_store::raft_engine::protos::logstore::LogStoreState\">LogStoreState</a>"],["impl ProtobufValue for <a class=\"struct\" href=\"log_store/raft_engine/protos/logstore/struct.NamespaceImpl.html\" title=\"struct log_store::raft_engine::protos::logstore::NamespaceImpl\">NamespaceImpl</a>"]]]]);
    if (window.register_implementors) {
        window.register_implementors(implementors);
    } else {
        window.pending_implementors = implementors;
    }
})()
//{"start":57,"fragment_lengths":[636]}